added get requests
